# bot_trader

./: CMakeLists.txt  application.cpp  application.h  binance.cpp  binance.h  bnc_data_types.cpp  bnc_data_types.h  database.h  events.h  general.h  html_messages.h  https_client.cpp  https_client.h  logger.cpp  logger.h  main.cpp  mstrategy.py  order.cpp  order.h  py_wrapper.cpp  py_wrapper.h  sock4a.hpp  statistic.cpp  statistic.h  strategy.py  strategy_sceleton.py  strategyserver.cpp  strategyserver.h  telegram.cpp  telegram.h  timer.h  tkeyboard.h  tlgbot.pro  utils.h  webhook_server.cpp  webhook_server.h  wss_client.cpp  wss_client.h  wss_server.cpp  wss_server.h
distrib/: build-deb.sh
distrib/bibot-deb/DEBIAN/: conffiles  control
distrib/bibot-deb/usr/local/etc/: bibot.conf  bibot.sqlite
scrdbg/: mstrategy.py  strategy_dbg.py
